fix: adjust winner wrapper z-index

--- a/src/components/gameWinnerComponent/GameWinnerComponent.module.css
+++ b/src/components/gameWinnerComponent/GameWinnerComponent.module.css
@@ -15,7 +15,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 3;
+  z-index: 11;
   display: flex;
   background-color: rgba(0, 0, 0, 0.6);
   width: 100%;
